--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1638,6 +1638,14 @@ html {
   margin-top: 1.25rem;
 }
 
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem;
+}
+
 .flex {
   display: flex;
 }
